[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml_requests"
version = "0.16.2"
authors = [
    {name = "Toni Kangas"},
]
description = "A simple python app for sending a set of consecutive HTTP requests defined in YAML requests plan."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ciou~=0.6",
    "Jinja2~=3.0",
    "pyyaml~=6.0",
    "requests~=2.0",
]

[project.scripts]
yaml_requests = "yaml_requests:execute"

[project.urls]
Homepage = "https://github.com/kangasta/yaml_requests"
Repository = "https://github.com/kangasta/yaml_requests.git"
Changelog = "https://github.com/kangasta/yaml_requests/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["yaml_requests*"]
